--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> 
   </head>
   <body>
-   
+   <header>
+       <a href="#"><img class="logo-container" src="./assets/logo/ohmyfood@2x.svg" al=""/></a>
+   </header>
   </body>
 </html>
