--- a/pages/enchante.html
+++ b/pages/enchante.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/eb2a778c36.js" crossorigin="anonymous" defer></script> 
   </head>
   <body>
    <header>
-       <a href="#"><img class="logo-container" src="./assets/logo/ohmyfood@2x.svg" al=""/></a>
+       <a href="#"><img class="logo-container" src="./assets/logo/ohmyfood@2x.svg" alt=""/></a>
    </header>
   </body>
 </html>
