💄 Adding mobile header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script src="https://kit.fontawesome.com/eb2a778c36.js" crossorigin="anonymous" defer></script> 
   </head>
   <body>
-   <header>
-       <a href="#"><img class="logo-container" src="./assets/logo/ohmyfood@2x.svg" alt=""/></a>
-   </header>
+    <header class="header">
+        <a href="#"><img class="header__logo" src="../../assets/logo/ohmyfood@2x.svg" alt=""/></a>
+    </header>
   </body>
 </html>
