--- a/pages/enchante.html
+++ b/pages/enchante.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food | La note enchantée </title>
-    <link rel="stylesheet" href="./assets/css/normalize.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="../../assets/css/normalize.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/eb2a778c36.js" crossorigin="anonymous" defer></script> 
   </head>
   <body>
-   <header>
-       <a href="#"><img class="logo-container" src="./assets/logo/ohmyfood@2x.svg" alt=""/></a>
-   </header>
+    <header class="header">
+        <a href="/index.html"><i class="header__return fa-solid fa-arrow-left fa-lg"></i></a>
+        <a href="#"><img class="header__logo" src="../../assets/logo/ohmyfood@2x.svg" alt=""/></a>
+    </header>
   </body>
 </html>
