--- a/index.html
+++ b/index.html
@@ -13,7 +13,43 @@
   </head>
   <body>
     <header class="header">
-        <a href="#"><img class="header__logo" src="../../assets/logo/ohmyfood@2x.svg" alt=""/></a>
+        <a href="#"><img src="../../assets/logo/ohmyfood@2x.svg" alt=""/></a>
     </header>
+
+    <section class="location-section">
+        <i class="fa-solid fa-location-dot"></i>
+        <span>Paris, Belleville</span>
+    </section>
+
+    <section class="exploration-section">
+        <h1>Réservez le menu qui vous convient</h1>
+        <span>Découvez des restaurants d'exception, sélectionnez par nos soins.</span>
+        <button>Explorer nos restaurants</button>
+    </section>
+
+    <section class="detail-section">
+        <span class="detail-section__title">Fonctionnement</span>
+            
+        <div class="detail-section__container">    
+            <div class="detail-section__container-button">
+                <span class="detail-section__container-button-number">1</span>
+                <i class="detail-section__container-button-icon fa-solid fa-mobile-screen-button"></i>
+                <span class="detail-section__button-title">Choisissez un restaurant</span>
+            </div>
+
+            <div class="detail-section__container-button">
+                <span class="detail-section__container-button-number">2</span>
+                <i class="detail-section__container-button-icon fa-solid fa-list-ul"></i>
+                <span class="detail-section__container-button-title">Composez votre menu</span>
+            </div>
+
+            <div class="detail-section__container-button">
+                <span class="detail-section__container-button-number">3</span>
+                <i class="detail-section__container-button-icon fa-solid fa-store"></i>
+                <span class="detail-section__container-button-title">Dégustez au restaurant</span>
+            </div>
+        </div>    
+    </section>
+
   </body>
 </html>
