♻️ UPDATE url source for main logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header class="header">
-        <a href="#"><img src="../../assets/logo/ohmyfood@2x.svg" alt=""/></a>
+        <a href="#"><img src="./assets/logo/ohmyfood@2x.svg" alt=""/></a>
     </header>
 
     <section class="location-section">
