--- a/pages/enchante.html
+++ b/pages/enchante.html
@@ -14,7 +14,7 @@
   <body>
     <header class="header">
         <a href="/index.html"><i class="header__return fa-solid fa-arrow-left fa-lg"></i></a>
-        <a href="#"><img class="header__logo" src="../../assets/logo/ohmyfood@2x.svg" alt=""/></a>
+        <a href="#"><img class="header__logo" src="./assets/logo/ohmyfood@2x.svg" alt=""/></a>
     </header>
   </body>
 </html>
