💄 Adding Index UI

--- a/index.html
+++ b/index.html
@@ -28,27 +28,43 @@
     </section>
 
     <section class="detail-section">
-        <span class="detail-section__title">Fonctionnement</span>
-            
+        <span class="detail-section__title">Fonctionnement</span>       
         <div class="detail-section__container">    
-            <div class="detail-section__container-button">
-                <span class="detail-section__container-button-number">1</span>
-                <i class="detail-section__container-button-icon fa-solid fa-mobile-screen-button"></i>
-                <span class="detail-section__button-title">Choisissez un restaurant</span>
-            </div>
+            <ul>
+                <li id="icon-number">1</li>
+                <i class="fa-solid fa-mobile-screen-button"></i></li>
+                <li>Choisissez un restaurant</li>
+            </ul>
 
-            <div class="detail-section__container-button">
-                <span class="detail-section__container-button-number">2</span>
-                <i class="detail-section__container-button-icon fa-solid fa-list-ul"></i>
-                <span class="detail-section__container-button-title">Composez votre menu</span>
-            </div>
+            <ul>
+                <li id="icon-number">2</li>
+                <i class="fa-solid fa-list-ul"></i>
+                <li>Composez votre menu</li>
+            </ul>
 
-            <div class="detail-section__container-button">
-                <span class="detail-section__container-button-number">3</span>
-                <i class="detail-section__container-button-icon fa-solid fa-store"></i>
-                <span class="detail-section__container-button-title">Dégustez au restaurant</span>
-            </div>
+            <ul>
+                <li id="icon-number" >3</li>
+                <i class="fa-solid fa-store"></i>
+                <li class="detail-section__container-button-title">Dégustez au restaurant</li>
+            </ul>
         </div>    
+    </section>
+
+    <section class="restaurant">
+        <h2>Restaurants</h2>
+            <div class="restaurant_container">
+                <a href="./pages/gout.html" class="restaurant-card">
+                    <div class="restaurant-card__image">
+                        <img src="./assets/restaurants/palette.jpg" alt=""/>
+                        <span>Nouveau</span>
+                        <div class="restaurant-card__title">
+                            <h3>La palette du Goût</h3>
+                            <span>Ménilmontant</span>
+                            <i class="fa-regular fa-heart fa-lg"></i>
+                        </div>
+                    </div>    
+                </a>
+            </div>
     </section>
 
   </body>
