💄 Adding restaurants cards

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <section class="detail-section">
-        <span class="detail-section__title">Fonctionnement</span>       
+        <span>Fonctionnement</span>       
         <div class="detail-section__container">    
             <ul>
                 <li id="icon-number">1</li>
@@ -60,6 +60,46 @@
                         <div class="restaurant-card__title">
                             <h3>La palette du Goût</h3>
                             <span>Ménilmontant</span>
+                            <i class="fa-regular fa-heart fa-lg"></i>
+                        </div>
+                    </div>    
+                </a>
+            </div>
+
+            <div class="restaurant_container">
+                <a href="./pages/gout.html" class="restaurant-card">
+                    <div class="restaurant-card__image">
+                        <img src="./assets/restaurants/enchante.jpg" alt=""/>
+                        <span>Nouveau</span>
+                        <div class="restaurant-card__title">
+                            <h3>La Note Enchantée</h3>
+                            <span>Charonne</span>
+                            <i class="fa-regular fa-heart fa-lg"></i>
+                        </div>
+                    </div>    
+                </a>
+            </div>
+
+            <div class="restaurant_container">
+                <a href="./pages/francaise.html" class="restaurant-card">
+                    <div class="restaurant-card__image">
+                        <img src="./assets/restaurants/francaise.jpg" alt=""/>
+                        <div class="restaurant-card__title">
+                            <h3>À la française</h3>
+                            <span>Cité Rouge</span>
+                            <i class="fa-regular fa-heart fa-lg"></i>
+                        </div>
+                    </div>    
+                </a>
+            </div>
+
+            <div class="restaurant_container">
+                <a href="./pages/sens.html" class="restaurant-card">
+                    <div class="restaurant-card__image">
+                        <img src="./assets/restaurants/palette.jpg" alt=""/>
+                        <div class="restaurant-card__title">
+                            <h3>Le délice des Sens</h3>
+                            <span>Folie-Méricourt</span>
                             <i class="fa-regular fa-heart fa-lg"></i>
                         </div>
                     </div>    
