--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
                             <i class="fa-regular fa-heart fa-lg"></i>
                         </div>
                     </div>    
-                </a>
-            </div>
-
-            <div class="restaurant_container">
+                </a>            
+            
                 <a href="./pages/gout.html" class="restaurant-card">
                     <div class="restaurant-card__image">
                         <img src="./assets/restaurants/enchante.jpg" alt=""/>
@@ -78,9 +76,7 @@
                         </div>
                     </div>    
                 </a>
-            </div>
-
-            <div class="restaurant_container">
+           
                 <a href="./pages/francaise.html" class="restaurant-card">
                     <div class="restaurant-card__image">
                         <img src="./assets/restaurants/francaise.jpg" alt=""/>
@@ -90,10 +86,8 @@
                             <i class="fa-regular fa-heart fa-lg"></i>
                         </div>
                     </div>    
-                </a>
-            </div>
+                </a>           
 
-            <div class="restaurant_container">
                 <a href="./pages/sens.html" class="restaurant-card">
                     <div class="restaurant-card__image">
                         <img src="./assets/restaurants/palette.jpg" alt=""/>
@@ -106,6 +100,16 @@
                 </a>
             </div>
     </section>
+
+    <footer class="footer">
+        <ul>
+            <img src="./assets/logo/ohmyfood.png"/>
+            <li>Proposer un restaurant</li>
+            <li>Devenir Partenaire</li>
+            <li>Mentions Légales</li>
+            <li>Contact</li>
+        </ul>
+    </footer>
 
   </body>
 </html>
