--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/eb2a778c36.js" crossorigin="anonymous" defer></script> 
   </head>
   <body>
@@ -103,11 +106,11 @@
 
     <footer class="footer">
         <ul>
-            <img src="./assets/logo/ohmyfood.png"/>
-            <li>Proposer un restaurant</li>
-            <li>Devenir Partenaire</li>
-            <li>Mentions Légales</li>
-            <li>Contact</li>
+            <li>Oh My Food</li>
+            <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+            <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a></li>
+            <li><a href="#">Mentions Légales</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </footer>
 
