--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="restaurant-card__title">
                             <h3>La palette du Goût</h3>
                             <span>Ménilmontant</span>
-                            <i class="fa-regular fa-heart fa-lg"></i>
+                            <i class="fa-regular fa-heart fa-2xl"></i>
                         </div>
                     </div>    
                 </a>            
@@ -75,7 +75,7 @@
                         <div class="restaurant-card__title">
                             <h3>La Note Enchantée</h3>
                             <span>Charonne</span>
-                            <i class="fa-regular fa-heart fa-lg"></i>
+                            <i class="fa-regular fa-heart fa-2xl"></i>
                         </div>
                     </div>    
                 </a>
@@ -86,7 +86,7 @@
                         <div class="restaurant-card__title">
                             <h3>À la française</h3>
                             <span>Cité Rouge</span>
-                            <i class="fa-regular fa-heart fa-lg"></i>
+                            <i class="fa-regular fa-heart fa-2xl"></i>
                         </div>
                     </div>    
                 </a>           
@@ -97,7 +97,7 @@
                         <div class="restaurant-card__title">
                             <h3>Le délice des Sens</h3>
                             <span>Folie-Méricourt</span>
-                            <i class="fa-regular fa-heart fa-lg"></i>
+                            <i class="fa-regular fa-heart fa-2xl"></i>
                         </div>
                     </div>    
                 </a>
