--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <footer class="footer">
         <ul>
-            <li>Oh My Food</li>
+            <li>ohmyfood</li>
             <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a></li>
             <li><a href="#">Mentions Légales</a></li>
