💄 Adding footer on pages

--- a/pages/enchante.html
+++ b/pages/enchante.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/eb2a778c36.js" crossorigin="anonymous" defer></script> 
   </head>
   <body>
@@ -16,5 +19,15 @@
         <a href="/index.html"><i class="header__return fa-solid fa-arrow-left fa-lg"></i></a>
         <a href="#"><img class="header__logo" src="../assets/logo/ohmyfood@2x.svg" alt=""/></a>
     </header>
+
+    <footer class="footer">
+      <ul>
+          <li>ohmyfood</li>
+          <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
+          <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a></li>
+          <li><a href="#">Mentions Légales</a></li>
+          <li><a href="#">Contact</a></li>
+      </ul>
+   </footer>
   </body>
 </html>
