💄Adding la note enchantée page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://kit.fontawesome.com/eb2a778c36.js" crossorigin="anonymous" defer></script> 
   </head>
   <body>
+
     <header class="header">
         <a href="#"><img src="./assets/logo/ohmyfood@2x.svg" alt=""/></a>
     </header>
@@ -63,19 +64,19 @@
                         <div class="restaurant-card__title">
                             <h3>La palette du Goût</h3>
                             <span>Ménilmontant</span>
-                            <i class="fa-regular fa-heart fa-2xl"></i>
+                            <i class="like-icon fa-regular fa-heart fa-2xl"></i>
                         </div>
                     </div>    
                 </a>            
             
-                <a href="./pages/gout.html" class="restaurant-card">
+                <a href="./pages/enchante.html" class="restaurant-card">
                     <div class="restaurant-card__image">
                         <img src="./assets/restaurants/enchante.jpg" alt=""/>
                         <span>Nouveau</span>
                         <div class="restaurant-card__title">
                             <h3>La Note Enchantée</h3>
                             <span>Charonne</span>
-                            <i class="fa-regular fa-heart fa-2xl"></i>
+                            <i class="like-icon fa-regular fa-heart fa-2xl"></i>
                         </div>
                     </div>    
                 </a>
@@ -86,7 +87,7 @@
                         <div class="restaurant-card__title">
                             <h3>À la française</h3>
                             <span>Cité Rouge</span>
-                            <i class="fa-regular fa-heart fa-2xl"></i>
+                            <i class="like-icon fa-regular fa-heart fa-2xl"></i>
                         </div>
                     </div>    
                 </a>           
@@ -97,7 +98,7 @@
                         <div class="restaurant-card__title">
                             <h3>Le délice des Sens</h3>
                             <span>Folie-Méricourt</span>
-                            <i class="fa-regular fa-heart fa-2xl"></i>
+                            <i class="like-icon fa-regular fa-heart fa-2xl"></i>
                         </div>
                     </div>    
                 </a>
