--- a/pages/enchante.html
+++ b/pages/enchante.html
@@ -20,12 +20,12 @@
         <a href="#"><img class="header__logo" src="../assets/logo/ohmyfood@2x.svg" alt=""/></a>
     </header>
 
-    <main class="enchante">
-      <div class="enchante__image"></div>
-      <div class="enchante__menu">
+    <main class="restaurant-details">
+      <div class="restaurant-details__image" id="enchante-background"></div>
+      <div class="restaurant-details__menu">
 
-        <div class="enchante__menu--title">
-          <h2>À la française</h2>
+        <div class="restaurant-details__menu--title">
+          <h2>La note enchantée</h2>
           <i class="like-icon fa-regular fa-heart fa-2xl"></i>
         </div>
 
@@ -202,7 +202,7 @@
 
         </div>
 
-        <div class="enchante__button">
+        <div class="restaurant-details__button">
           <button>Commander</button>
         </div>    
 
