--- a/pages/gout.html
+++ b/pages/gout.html
@@ -21,7 +21,7 @@
     </header>
 
     <main class="restaurant-details">
-      <div class="restaurant-details__image" id="palette-background"></div>
+      <div class="restaurant-details__image" id="gout-background"></div>
       <div class="restaurant-details__menu">
 
         <div class="restaurant-details__menu--title">
