--- a/pages/enchante.html
+++ b/pages/enchante.html
@@ -26,7 +26,7 @@
 
         <div class="restaurant-details__menu--title">
           <h2>La note enchantée</h2>
-          <i class="like-icon fa-regular fa-heart fa-2xl"></i>
+          <div class="box"><i class="like-icon fa-regular fa-heart fa-2xl"></i></div>
         </div>
 
         <div class="menu-card-container">
