--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <script src="https://kit.fontawesome.com/eb2a778c36.js" crossorigin="anonymous" defer></script> 
   </head>
   <body>
+    <div class="loader">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 
     <header class="header">
         <a href="#"><img src="./assets/logo/ohmyfood@2x.svg" alt=""/></a>
