--- a/pages/francaise.html
+++ b/pages/francaise.html
@@ -39,8 +39,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Ravioles de foie gras</h4>
-                <span>Accompagnées de leur crème à la truffe</span>
+                <h4>Tartare de poulpe acidulé</h4>
+                <span>Aux zests d'orange</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">25€</span>  
@@ -52,8 +52,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Caviar ociètre</h4>
-                <span>Sur blini à la farine de blé noir</span>
+                <h4>Velouté de légumes d'antan</h4>
+                <span>Carottes, panais, topinambour</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">35€</span>  
@@ -65,24 +65,11 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Homard et espuma de potiron</h4>
-                <span>Marinés aux zestes d'orange</span>
+                <h4>Soupe à l'oignon</h4>
+                <span>Revisté</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">20€</span>  
-              </div>
-              <div class="menu-card__component--check">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-            </div>
-
-            <div class="menu-card__component">
-              <div class="menu-card__component--title">
-                <h4>Foie gras de canard cuit entier</h4>
-                <span>Confiture de figue et pain toasté</span>
-              </div>
-              <div class="menu-card__component--price">
-                <span class="card-price">35€</span>  
               </div>
               <div class="menu-card__component--check">
                 <i class="fa-solid fa-circle-check"></i>
@@ -100,21 +87,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Tartare de poulpe acidulé</h4>
-                <span>Aux zests d'orange</span>
-              </div>
-              <div class="menu-card__component--price">
-                <span class="card-price">25€</span>  
-              </div>
-              <div class="menu-card__component--check">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-            </div>
-
-            <div class="menu-card__component">
-              <div class="menu-card__component--title">
-                <h4>Noix de coquille saint jacques</h4>
-                <span>Sur purée de céleri-rave</span>
+                <h4>Coquilles Saint-Jacques</h4>
+                <span>Accompangées d'une purée de panais</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">40€</span>  
@@ -126,8 +100,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Langoustine poëlée</h4>
-                <span>Purée de patate douce</span>
+                <h4>Magret de canard</h4>
+                <span>Et parmentier de pommes de terre</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">35€</span>  
@@ -139,8 +113,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Mijotéé de queue de boeuf</h4>
-                <span>Et riz sauvage aux zests de citron</span>
+                <h4>Pigeonneau d'Ile-et-Vilaine</h4>
+                <span>Sur son lit de gnocchis aux légumes</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">44€</span>  
@@ -161,8 +135,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Macaron noisette et chocolat</h4>
-                <span>Glace au caramel brun et sel de guérande</span>
+                <h4>Pétales de violettes glacées</h4>
+                <span>Et purée de noisette</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">18€</span>  
@@ -174,8 +148,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Baba au rhum revisité</h4>
-                <span>Avec son coulis de citron</span>
+                <h4>Fondant au chocolat</h4>
+                <span>Revisité</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">22€</span>  
@@ -187,8 +161,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Tarte au citron meringuée</h4>
-                <span>Destructurée</span>
+                <h4>Millefeuille croustillant</h4>
+                <span>Myrtilles et pâte d'amande</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">23€</span>  
