--- a/pages/gout.html
+++ b/pages/gout.html
@@ -39,8 +39,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Ravioles de foie gras</h4>
-                <span>Accompagnées de leur crème à la truffe</span>
+                <h4>Fricasée d'escargots</h4>
+                <span>Au piment d'espelette</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">25€</span>  
@@ -52,8 +52,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Caviar ociètre</h4>
-                <span>Sur blini à la farine de blé noir</span>
+                <h4>Foie gras de canard mi-cuit</h4>
+                <span>Et ses copeaux de truffe noire </span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">35€</span>  
@@ -65,24 +65,11 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Homard et espuma de potiron</h4>
-                <span>Marinés aux zestes d'orange</span>
+                <h4>Oeuf au plat</h4>
+                <span>Assaisonée à la truffe sur lit de caviar</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">20€</span>  
-              </div>
-              <div class="menu-card__component--check">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-            </div>
-
-            <div class="menu-card__component">
-              <div class="menu-card__component--title">
-                <h4>Foie gras de canard cuit entier</h4>
-                <span>Confiture de figue et pain toasté</span>
-              </div>
-              <div class="menu-card__component--price">
-                <span class="card-price">35€</span>  
               </div>
               <div class="menu-card__component--check">
                 <i class="fa-solid fa-circle-check"></i>
@@ -100,11 +87,11 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Tartare de poulpe acidulé</h4>
-                <span>Aux zests d'orange</span>
+                <h4>Filet de boeuf aux herbes</h4>
+                <span>Accompagné de sa ribambelle de légumes</span>
               </div>
               <div class="menu-card__component--price">
-                <span class="card-price">25€</span>  
+                <span class="card-price">40€</span>  
               </div>
               <div class="menu-card__component--check">
                 <i class="fa-solid fa-circle-check"></i>
@@ -126,8 +113,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Langoustine poëlée</h4>
-                <span>Purée de patate douce</span>
+                <h4>Parmentier de queue de boeuf</h4>
+                <span>À la truffe noire sur sa purée de panais</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">35€</span>  
@@ -139,8 +126,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Mijotéé de queue de boeuf</h4>
-                <span>Et riz sauvage aux zests de citron</span>
+                <h4>Filet de turbot</h4>
+                <span>Aux agrumes</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">44€</span>  
@@ -161,8 +148,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Macaron noisette et chocolat</h4>
-                <span>Glace au caramel brun et sel de guérande</span>
+                <h4>Paris-brest</h4>
+                <span>Revisité</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">18€</span>  
@@ -174,8 +161,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Baba au rhum revisité</h4>
-                <span>Avec son coulis de citron</span>
+                <h4>Macaron au chocolat d'exception</h4>
+                <span>Et glace à la vanille de Madagascar</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">22€</span>  
@@ -187,8 +174,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Tarte au citron meringuée</h4>
-                <span>Destructurée</span>
+                <h4>Mousse au chocolat</h4>
+                <span>Au piment d'espelette et à la truffe noire</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">23€</span>  
