--- a/pages/sens.html
+++ b/pages/sens.html
@@ -39,8 +39,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Ravioles de foie gras</h4>
-                <span>Accompagnées de leur crème à la truffe</span>
+                <h4>Tartare de thon</h4>
+                <span>Assaisonné au yuzu</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">25€</span>  
@@ -52,8 +52,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Caviar ociètre</h4>
-                <span>Sur blini à la farine de blé noir</span>
+                <h4>Bouché de homard croustillant</h4>
+                <span>Et sa farandolle de petits légumes</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">35€</span>  
@@ -65,24 +65,11 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Homard et espuma de potiron</h4>
-                <span>Marinés aux zestes d'orange</span>
+                <h4>Velouté de cèpes</h4>
+                <span>Aux truffes</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">20€</span>  
-              </div>
-              <div class="menu-card__component--check">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-            </div>
-
-            <div class="menu-card__component">
-              <div class="menu-card__component--title">
-                <h4>Foie gras de canard cuit entier</h4>
-                <span>Confiture de figue et pain toasté</span>
-              </div>
-              <div class="menu-card__component--price">
-                <span class="card-price">35€</span>  
               </div>
               <div class="menu-card__component--check">
                 <i class="fa-solid fa-circle-check"></i>
@@ -100,8 +87,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Tartare de poulpe acidulé</h4>
-                <span>Aux zests d'orange</span>
+                <h4>Poulet rôti aux herbes de provence</h4>
+                <span>Et sa crème de truffes</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">25€</span>  
@@ -113,21 +100,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Noix de coquille saint jacques</h4>
-                <span>Sur purée de céleri-rave</span>
-              </div>
-              <div class="menu-card__component--price">
-                <span class="card-price">40€</span>  
-              </div>
-              <div class="menu-card__component--check">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-            </div>
-
-            <div class="menu-card__component">
-              <div class="menu-card__component--title">
-                <h4>Langoustine poëlée</h4>
-                <span>Purée de patate douce</span>
+                <h4>Langouste rôtie</h4>
+                <span>Et ses légumes de saison</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">35€</span>  
@@ -139,8 +113,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Mijotéé de queue de boeuf</h4>
-                <span>Et riz sauvage aux zests de citron</span>
+                <h4>Côtes de boeuf angus</h4>
+                <span>Et sa purée de panais</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">44€</span>  
@@ -161,8 +135,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Macaron noisette et chocolat</h4>
-                <span>Glace au caramel brun et sel de guérande</span>
+                <h4>Farandole de desserts</h4>
+                <span>Du chef</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">18€</span>  
@@ -174,8 +148,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Baba au rhum revisité</h4>
-                <span>Avec son coulis de citron</span>
+                <h4>Crème brûlée</h4>
+                <span>Revistée</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">22€</span>  
@@ -187,8 +161,8 @@
 
             <div class="menu-card__component">
               <div class="menu-card__component--title">
-                <h4>Tarte au citron meringuée</h4>
-                <span>Destructurée</span>
+                <h4>Tiramisu à la noisette</h4>
+                <span>À la française</span>
               </div>
               <div class="menu-card__component--price">
                 <span class="card-price">23€</span>  
