--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/eb2a778c36.js" crossorigin="anonymous" defer></script> 
+    <script src="https://kit.fontawesome.com/eb2a778c36.js" crossorigin="anonymous"></script> 
   </head>
   <body>
     <div class="loader">
