--- a/pages/gout.html
+++ b/pages/gout.html
@@ -15,9 +15,9 @@
     <script src="https://kit.fontawesome.com/eb2a778c36.js" crossorigin="anonymous" defer></script> 
   </head>
   <body>
-    <header class="header">
+    <header class="header header-restaurant">
         <a href="/index.html"><i class="header__return fa-solid fa-arrow-left fa-lg"></i></a>
-        <a href="#"><img class="header__logo" src="../assets/logo/ohmyfood@2x.svg" alt=""/></a>
+        <a href="#"><h1>OhMyFood</h1><img class="header__logo" src="../assets/logo/ohmyfood@2x.svg" alt=""/></a>
     </header>
 
     <main class="restaurant-details">
