--- a/pages/sens.html
+++ b/pages/sens.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="header header-restaurant">
-        <a href="/index.html"><i class="header__return fa-solid fa-arrow-left fa-lg"></i></a>
+        <a href="../index.html"><i class="header__return fa-solid fa-arrow-left fa-lg"></i></a>
         <a href="#"><h1>OhMyFood</h1><img class="header__logo" src="../assets/logo/ohmyfood@2x.svg" alt=""/></a>
     </header>
 
