--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <li><a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a></li>
             <li><a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</a></li>
             <li><a href="#">Mentions Légales</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="mailto:#">Contact</a></li>
         </ul>
     </footer>
   </body>
