--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section class="location-section">
         <i class="fa-solid fa-location-dot"></i>
-        <span>Paris, Belleville</span>
+        <h4>Paris, Belleville</h4>
     </section>
 
     <section class="exploration-section">
@@ -37,23 +37,23 @@
     </section>
 
     <section class="detail-section">
-        <span>Fonctionnement</span>       
+        <h2>Fonctionnement</h2>       
         <div class="detail-section__container">    
             <ul>
                 <li id="icon-number">1</li>
-                <i class="fa-solid fa-mobile-screen-button"></i></li>
+                <li><i class="fa-solid fa-mobile-screen-button"></i></li>
                 <li>Choisissez un restaurant</li>
             </ul>
 
             <ul>
-                <li id="icon-number">2</li>
-                <i class="fa-solid fa-list-ul"></i>
+                <li id="icon-number2">2</li>
+                <li><i class="fa-solid fa-list-ul"></i></li>
                 <li>Composez votre menu</li>
             </ul>
 
             <ul>
-                <li id="icon-number" >3</li>
-                <i class="fa-solid fa-store"></i>
+                <li id="icon-number3" >3</li>
+                <li><i class="fa-solid fa-store"></i></li>
                 <li class="detail-section__container-button-title">Dégustez au restaurant</li>
             </ul>
         </div>    
